Incus v6.16.0に合わせて日本語訳を更新
Signed-off-by: Hiroaki Nakamura <hnakamur@gmail.com>

--- a/doc/rest-api.yaml
+++ b/doc/rest-api.yaml
@@ -2062,6 +2062,11 @@ definitions:
                 format: date-time
                 type: string
                 x-go-name: CreatedAt
+            description:
+                description: Instance description
+                example: My description
+                type: string
+                x-go-name: Description
             devices:
                 additionalProperties:
                     additionalProperties:
