--- a/internal/server/metadata/configuration.json
+++ b/internal/server/metadata/configuration.json
@@ -2479,6 +2479,15 @@
 						}
 					},
 					{
+						"limits.memory.oom_priority": {
+							"defaultdesc": "`0`",
+							"liveupdate": "yes",
+							"longdesc": "Specify an integer between -1000 and 1000.\nA negative value makes the instance less likely to be killed by the Out Of Memory killer,\nwhile a positive value makes it more likely to be killed.\nThe default value of 0 means no adjustment to the Out Of Memory score.",
+							"shortdesc": "Out Of Memory killer priority adjustment for the instance",
+							"type": "integer"
+						}
+					},
+					{
 						"limits.memory.swap": {
 							"condition": "container",
 							"defaultdesc": "`true`",
@@ -4239,6 +4248,78 @@
 							"longdesc": "",
 							"shortdesc": "Whether to log ingress traffic that doesn't match any ACL rule",
 							"type": "bool"
+						}
+					},
+					{
+						"tunnel.NAME.group": {
+							"condition": "`vxlan`",
+							"default": "`239.0.0.1`",
+							"longdesc": "",
+							"shortdesc": "Multicast address for `vxlan`",
+							"type": "string"
+						}
+					},
+					{
+						"tunnel.NAME.id": {
+							"condition": "`vxlan`",
+							"default": "`0`",
+							"longdesc": "",
+							"shortdesc": "Specific tunnel ID to use for the `vxlan` tunnel",
+							"type": "integer"
+						}
+					},
+					{
+						"tunnel.NAME.interface": {
+							"condition": "`vxlan`",
+							"default": "-",
+							"longdesc": "",
+							"shortdesc": "Specific host interface to use for the tunnel",
+							"type": "string"
+						}
+					},
+					{
+						"tunnel.NAME.local": {
+							"condition": "`gre`",
+							"default": "-",
+							"longdesc": "",
+							"shortdesc": "Local address for the tunnel",
+							"type": "string"
+						}
+					},
+					{
+						"tunnel.NAME.port": {
+							"condition": "`vxlan`",
+							"default": "`0`",
+							"longdesc": "",
+							"shortdesc": "Specific port to use for the `vxlan` tunnel",
+							"type": "integer"
+						}
+					},
+					{
+						"tunnel.NAME.protocol": {
+							"condition": "standard mode",
+							"default": "-",
+							"longdesc": "",
+							"shortdesc": "Tunneling protocol: `vxlan` or `gre`",
+							"type": "string"
+						}
+					},
+					{
+						"tunnel.NAME.remote": {
+							"condition": "`gre`",
+							"default": "-",
+							"longdesc": "",
+							"shortdesc": "Remote address for the tunnel",
+							"type": "string"
+						}
+					},
+					{
+						"tunnel.NAME.ttl": {
+							"condition": "`vxlan`",
+							"default": "`1`",
+							"longdesc": "",
+							"shortdesc": "Specific TTL to use for multicast routing topologies",
+							"type": "integer"
 						}
 					},
 					{
